--- a/sld.html
+++ b/sld.html
@@ -1,81 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>HT Board Professional SLD</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body{font-family:Arial;margin:0;background:#f2f6ff}
-
-/* HEADER */
-.header-bar{
-  position:sticky;top:0;z-index:1000;
-  background:#003f88;color:#fff;
-  display:flex;align-items:center;gap:10px;
-  padding:12px;
-}
-.header-bar button{
-  background:#fff;color:#003f88;border:none;
-  border-radius:6px;padding:8px 12px;
-  font-size:16px;cursor:pointer;
-}
-.header-title{flex:1;text-align:center;font-size:22px;font-weight:700}
-
-.container{padding:12px}
-.card{
-  background:#fff;border-radius:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,.15);
-  padding:12px;
-}
-
-#wrap{
-  overflow:auto;border:1px solid #ccc;
-  background:#fff;height:70vh;
-}
-#sldCanvas{width:100%;height:100%}
-
-/* GRAPHICS */
-.bus{stroke:#000;stroke-width:4}
-.power-line{
-  stroke:#00cc44;stroke-width:4;
-  stroke-dasharray:10 6;
-  animation:flow 1s linear infinite;
-}
-@keyframes flow{from{stroke-dashoffset:0}to{stroke-dashoffset:-32}}
-
-.label{font-size:16px;font-weight:600;text-anchor:middle}
-.cbtext{font-size:15px;font-weight:bold;text-anchor:middle}
-.board-title{
-  font-size:24px;font-weight:900;
-  fill:#003f88;text-anchor:middle;
-}
-.info{font-weight:bold;color:#003f88;margin-bottom:8px}
-
-@media(max-width:768px){
-  .label{font-size:17px}
-  .cbtext{font-size:16px}
-}
-</style>
-</head>
-
-<body>
-
-<div class="header-bar">
-  <button onclick="goHome()">🏠 Home</button>
-  <button onclick="goBack()">⬅ Back</button>
-  <div class="header-title" id="title">HT BOARD SLD</div>
-</div>
-
-<div class="container">
-  <div class="card">
-    <div class="info" id="boardInfo">Loading...</div>
-    <div id="wrap">
-      <svg id="sldCanvas" viewBox="0 0 1400 620"></svg>
-    </div>
-  </div>
-</div>
-
 <script>
 // ================= CONFIG =================
 const JSON_URL =
@@ -100,48 +22,20 @@ function line(x1,y1,x2,y2,cls="bus"){
   svg.appendChild(e);
 }
 
-function text(x,y,str,anchor="middle",cls="label"){
+function text(x,y,str,anchor="middle",cls="label",clickUrl=null){
   const t=document.createElementNS("http://www.w3.org/2000/svg","text");
   t.setAttribute("x",x);
   t.setAttribute("y",y);
   t.setAttribute("text-anchor",anchor);
   t.setAttribute("class",cls);
   t.textContent=str;
+
+  if(clickUrl){
+    t.style.cursor="pointer";
+    t.addEventListener("click",()=>{ location.href=clickUrl; });
+  }
+
   svg.appendChild(t);
-}
-
-function wrappedText(x,y,str,maxChars=14){
-  str=String(str||"");
-  const words=str.split(" ");
-  const lineHeight=18;
-
-  let lines=[],current="";
-
-  words.forEach(w=>{
-    if((current+w).length>maxChars){
-      lines.push(current.trim());
-      current=w+" ";
-    }else{
-      current+=w+" ";
-    }
-  });
-  if(current.trim()) lines.push(current.trim());
-
-  const textEl=document.createElementNS("http://www.w3.org/2000/svg","text");
-  textEl.setAttribute("x",x);
-  textEl.setAttribute("y",y);
-  textEl.setAttribute("text-anchor","middle");
-  textEl.setAttribute("class","label");
-
-  lines.forEach((ln,i)=>{
-    const tspan=document.createElementNS("http://www.w3.org/2000/svg","tspan");
-    tspan.setAttribute("x",x);
-    tspan.setAttribute("dy",i===0?0:lineHeight);
-    tspan.textContent=ln;
-    textEl.appendChild(tspan);
-  });
-
-  svg.appendChild(textEl);
 }
 
 // ---------- board title ----------
@@ -150,7 +44,10 @@ function drawBoardTitle(name){
 }
 
 // ---------- transformer ----------
-function transformer(x,y,name){
+function transformer(x,y,name,transformerNo){
+  const group=document.createElementNS("http://www.w3.org/2000/svg","g");
+  group.style.cursor="pointer";
+
   const c1=document.createElementNS("http://www.w3.org/2000/svg","circle");
   c1.setAttribute("cx",x-12);
   c1.setAttribute("cy",y);
@@ -165,9 +62,23 @@ function transformer(x,y,name){
   c2.setAttribute("stroke","#000");
   c2.setAttribute("fill","none");
 
-  svg.appendChild(c1);
-  svg.appendChild(c2);
-  text(x,y-18,name);
+  const label=document.createElementNS("http://www.w3.org/2000/svg","text");
+  label.setAttribute("x",x);
+  label.setAttribute("y",y-18);
+  label.setAttribute("class","label");
+  label.textContent=name;
+
+  group.appendChild(c1);
+  group.appendChild(c2);
+  group.appendChild(label);
+
+  group.addEventListener("click",()=>{
+    if(transformerNo){
+      location.href="https://08electricaldata.github.io/drive-viewer/history.html?id="+transformerNo;
+    }
+  });
+
+  svg.appendChild(group);
 }
 
 // ---------- breaker ----------
@@ -184,13 +95,14 @@ function breaker(x,y,label,side=null,isCoupler=false){
 
   text(x,y+5,"CB","middle","cbtext");
 
-  // ⭐ FIX: bus coupler caption from JSON
+  const clickUrl="https://08electricaldata.github.io/drive-viewer/history.html?id=Breaker-"+label;
+
   if(isCoupler && label){
-    text(x,y-24,label);
+    text(x,y-24,label,"middle","label",clickUrl);
   }else if(side==="left"){
-    text(x-150,y+5,label,"end");
+    text(x-150,y+5,label,"end","label",clickUrl);
   }else if(side==="right"){
-    text(x+150,y+5,label,"start");
+    text(x+150,y+5,label,"start","label",clickUrl);
   }
 }
 
@@ -236,13 +148,13 @@ function draw(board,boardId){
 
   drawBoardTitle(boardId);
 
-  // BUS A & B
+  // BUS
   line(100,BUS_Y,mid-GAP/2,BUS_Y,"bus");
   line(mid+GAP/2,BUS_Y,W-100,BUS_Y,"bus");
 
-  // ⭐ BUS COUPLER — NOW FROM JSON
+  // BUS COUPLER
   if(board.busCouplers?.length){
-    const bc = board.busCouplers[0];
+    const bc=board.busCouplers[0];
     breaker(mid,BUS_Y,bc.breakerId,null,true);
   }
 
@@ -257,13 +169,21 @@ function draw(board,boardId){
 
   incomers.forEach((inc,i)=>{
     const x=spacing*(i+1);
-    transformer(x,120,inc.source);
+
+    transformer(
+      x,
+      120,
+      inc.source,
+      "Transformer-"+inc.transformer
+    );
+
     line(x,140,x,BUS_Y-30,"power-line");
+
     const side=(i===0)?"left":"right";
     breaker(x,BUS_Y-40,inc.breakerId,side,false);
   });
 
-  // POSITION BASED OUTGOINGS
+  // OUTGOINGS (unchanged)
   let maxPos=0;
   [...(board.incomers||[]),...(board.outgoings||[]),...(board.busCouplers||[])]
     .forEach(r=>{ if(r.position>maxPos) maxPos=r.position; });
@@ -283,12 +203,10 @@ function draw(board,boardId){
     line(x,BUS_Y+6,x,BUS_Y+46,"bus");
     breaker(x,BUS_Y+66,null);
     arrowDown(x,BUS_Y+82);
-    wrappedText(x,BUS_Y+170,o.breakerId,16);
+
+    text(x,BUS_Y+170,o.breakerId);
   });
 }
 
 loadSLD();
 </script>
-
-</body>
-</html>
