--- a/sld3.html
+++ b/sld3.html
@@ -28,19 +28,28 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
   padding:12px;
 }
 
+/* TABLE */
 #columnTable{
   width:100%;
   border-collapse:collapse;
   margin-bottom:15px;
+  table-layout:fixed;
 }
+#columnTable th,
 #columnTable td{
   border:1px solid #000;
   padding:6px;
   text-align:center;
   font-weight:600;
-  font-size:14px;
+  font-size:13px;
 }
 
+/* Color Coding */
+.incomer{background:#d9f2d9}
+.outgoing{background:#d9e8ff}
+.coupler{background:#fff3b0}
+
+/* SLD */
 #wrap{
   overflow:auto;
   border:1px solid #ccc;
@@ -48,6 +57,11 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
   height:65vh;
 }
 .bus{stroke:#000;stroke-width:4}
+.label{font-size:15px;font-weight:600;text-anchor:middle}
+.board-title{
+  font-size:24px;font-weight:900;
+  fill:#003f88;text-anchor:middle;
+}
 .info{font-weight:bold;color:#003f88;margin-bottom:8px}
 </style>
 </head>
@@ -65,9 +79,10 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 
     <div id="boardInfo" class="info">Loading...</div>
 
-    <!-- 🔥 FIXED TABLE -->
+    <!-- TABLE -->
     <table id="columnTable"></table>
 
+    <!-- SLD -->
     <div id="wrap">
       <svg id="sldCanvas" viewBox="0 0 1400 620"></svg>
     </div>
@@ -87,14 +102,14 @@ function getParam(n){return new URL(location.href).searchParams.get(n)}
 const columnTable=document.getElementById("columnTable");
 const boardInfoEl=document.getElementById("boardInfo");
 const titleEl=document.getElementById("title");
+const svg=document.getElementById("sldCanvas");
 
-/* ================= TABLE BUILDER (FIXED) ================= */
+/* ================= TABLE ================= */
 
 function buildColumnTable(board){
 
   columnTable.innerHTML="";
 
-  // Combine ALL devices
   const allDevices=[
     ...(board.incomers||[]),
     ...(board.outgoings||[]),
@@ -105,37 +120,51 @@ function buildColumnTable(board){
 
   if(!allDevices.length) return;
 
-  // 🔥 FIX: Correct max position detection
-  let maxPos = 0;
+  let maxPos=0;
   allDevices.forEach(d=>{
-    if(d.position && d.position > maxPos){
-      maxPos = d.position;
-    }
+    if(d.position>maxPos) maxPos=d.position;
   });
 
-  if(maxPos === 0) return;
+  // 🔹 HEADER ROW (Column Numbers)
+  const headerRow=document.createElement("tr");
+  for(let i=1;i<=maxPos;i++){
+    const th=document.createElement("th");
+    th.innerText=i;
+    headerRow.appendChild(th);
+  }
+  columnTable.appendChild(headerRow);
 
-  const row1=document.createElement("tr"); // COLUMN F
-  const row2=document.createElement("tr"); // COLUMN D
-  const row3=document.createElement("tr"); // COLUMN E
+  const row1=document.createElement("tr"); // FEEDER_TYPE
+  const row2=document.createElement("tr"); // breakerId
+  const row3=document.createElement("tr"); // breakerType
 
   for(let i=1;i<=maxPos;i++){
 
-    const device = allDevices.find(d => d.position === i);
+    const device=allDevices.find(d=>d.position===i);
 
     const td1=document.createElement("td");
     const td2=document.createElement("td");
     const td3=document.createElement("td");
 
     if(device){
-      // ✅ FIRST ROW → COLUMN F VALUE
-      td1.innerText = device.source || "";
 
-      // ✅ SECOND ROW → COLUMN D VALUE
-      td2.innerText = device.breakerId || "";
+      // Row Mapping
+      td1.innerText=device.feederType || "";
+      td2.innerText=device.breakerId || "";
+      td3.innerText=device.breakerType || "";
 
-      // ✅ THIRD ROW → COLUMN E VALUE
-      td3.innerText = device.breakerType || "";
+      // Color Logic
+      let cls="";
+      if(["INCOMER","LINE_PT","BUS_PT"].includes(device.feederType))
+        cls="incomer";
+      else if(device.feederType==="OUTGOING")
+        cls="outgoing";
+      else if(device.feederType==="BUS_COUPLER")
+        cls="coupler";
+
+      td1.classList.add(cls);
+      td2.classList.add(cls);
+      td3.classList.add(cls);
     }
 
     row1.appendChild(td1);
@@ -146,6 +175,25 @@ function buildColumnTable(board){
   columnTable.appendChild(row1);
   columnTable.appendChild(row2);
   columnTable.appendChild(row3);
+}
+
+/* ================= SIMPLE SLD ================= */
+
+function clearSVG(){svg.innerHTML=""}
+
+function line(x1,y1,x2,y2){
+  const e=document.createElementNS("http://www.w3.org/2000/svg","line");
+  e.setAttribute("x1",x1);
+  e.setAttribute("y1",y1);
+  e.setAttribute("x2",x2);
+  e.setAttribute("y2",y2);
+  e.setAttribute("class","bus");
+  svg.appendChild(e);
+}
+
+function draw(board){
+  clearSVG();
+  line(100,280,1300,280);
 }
 
 /* ================= LOAD ================= */
@@ -171,8 +219,8 @@ async function loadSLD(){
 
     boardInfoEl.innerText="Incomers: "+board.topology.totalIncomers;
 
-    // 🔥 BUILD FIXED TABLE
     buildColumnTable(board);
+    draw(board);
 
   }catch(e){
     console.error(e);
