--- a/sld3.html
+++ b/sld3.html
@@ -8,6 +8,7 @@
 <style>
 body{font-family:Arial;margin:0;background:#f2f6ff}
 
+/* HEADER */
 .header-bar{
   position:sticky;top:0;z-index:1000;
   background:#003f88;color:#fff;
@@ -43,7 +44,6 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
   font-weight:600;
 }
 
-/* Color Coding */
 .incomer{background:#d9f2d9}
 .outgoing{background:#d9e8ff}
 .coupler{background:#fff3b0}
@@ -53,14 +53,21 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
   overflow:auto;
   border:1px solid #ccc;
   background:#fff;
-  height:65vh;
+  height:70vh;
 }
 .bus{stroke:#000;stroke-width:4}
+.power-line{
+  stroke:#00cc44;stroke-width:4;
+  stroke-dasharray:10 6;
+  animation:flow 1s linear infinite;
+}
+@keyframes flow{from{stroke-dashoffset:0}to{stroke-dashoffset:-32}}
+
+.label{font-size:16px;font-weight:600;text-anchor:middle}
+.cbtext{font-size:15px;font-weight:bold;text-anchor:middle}
 .board-title{
-  font-size:24px;
-  font-weight:900;
-  fill:#003f88;
-  text-anchor:middle;
+  font-size:24px;font-weight:900;
+  fill:#003f88;text-anchor:middle;
 }
 .info{font-weight:bold;color:#003f88;margin-bottom:8px}
 </style>
@@ -77,12 +84,14 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 <div class="container">
   <div class="card">
 
-    <div id="boardInfo" class="info">Loading...</div>
+    <div class="info" id="boardInfo">Loading...</div>
 
+    <!-- TABLE -->
     <table id="columnTable"></table>
 
+    <!-- SLD -->
     <div id="wrap">
-      <svg id="sldCanvas" viewBox="0 0 1400 600"></svg>
+      <svg id="sldCanvas" viewBox="0 0 1400 620"></svg>
     </div>
 
   </div>
@@ -109,58 +118,21 @@ function clearSVG(){svg.innerHTML=""}
 function buildColumnTable(board){
 
   columnTable.innerHTML="";
-
   const allDevices=[];
 
-  // Incomers
-  (board.incomers||[]).forEach(d=>{
-    d._type="INCOMER";
-    allDevices.push(d);
-  });
-
-  // Outgoings
-  (board.outgoings||[]).forEach(d=>{
-    d._type="OUTGOING";
-    allDevices.push(d);
-  });
-
-  // Bus Coupler
-  (board.busCouplers||[]).forEach(d=>{
-    d._type="BUS_COUPLER";
-    allDevices.push(d);
-  });
-
-  // Bus PT
-  (board.busPT||[]).forEach(d=>{
-    d._type="BUS_PT";
-    allDevices.push(d);
-  });
-
-  // Line PT
-  (board.linePT||[]).forEach(d=>{
-    d._type="LINE_PT";
-    allDevices.push(d);
-  });
-
-  // Future safety
-  (board.dgIncomers||[]).forEach(d=>{
-    d._type="INCOMER";
-    allDevices.push(d);
-  });
-
-  (board.emergencyIncomers||[]).forEach(d=>{
-    d._type="INCOMER";
-    allDevices.push(d);
-  });
+  (board.incomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
+  (board.outgoings||[]).forEach(d=>{d._type="OUTGOING";allDevices.push(d);});
+  (board.busCouplers||[]).forEach(d=>{d._type="BUS_COUPLER";allDevices.push(d);});
+  (board.busPT||[]).forEach(d=>{d._type="BUS_PT";allDevices.push(d);});
+  (board.linePT||[]).forEach(d=>{d._type="LINE_PT";allDevices.push(d);});
+  (board.dgIncomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
+  (board.emergencyIncomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
 
   if(!allDevices.length) return;
 
   let maxPos=0;
-  allDevices.forEach(d=>{
-    if(d.position>maxPos) maxPos=d.position;
-  });
+  allDevices.forEach(d=>{if(d.position>maxPos) maxPos=d.position;});
 
-  // Column numbers
   const headerRow=document.createElement("tr");
   for(let i=1;i<=maxPos;i++){
     const th=document.createElement("th");
@@ -174,29 +146,21 @@ function buildColumnTable(board){
   const row3=document.createElement("tr");
 
   for(let i=1;i<=maxPos;i++){
-
     const device=allDevices.find(d=>d.position===i);
-
     const td1=document.createElement("td");
     const td2=document.createElement("td");
     const td3=document.createElement("td");
 
     if(device){
-
       const type=device._type;
-
       td1.innerText=type;
-      td2.innerText=device.breakerId || "";
-      td3.innerText=device.breakerType || "";
+      td2.innerText=device.breakerId||"";
+      td3.innerText=device.breakerType||"";
 
       let cls="";
-
-      if(["INCOMER","LINE_PT","BUS_PT"].includes(type))
-        cls="incomer";
-      else if(type==="OUTGOING")
-        cls="outgoing";
-      else if(type==="BUS_COUPLER")
-        cls="coupler";
+      if(["INCOMER","LINE_PT","BUS_PT"].includes(type)) cls="incomer";
+      else if(type==="OUTGOING") cls="outgoing";
+      else if(type==="BUS_COUPLER") cls="coupler";
 
       td1.className=cls;
       td2.className=cls;
@@ -213,61 +177,162 @@ function buildColumnTable(board){
   columnTable.appendChild(row3);
 }
 
-/* ================= SIMPLE SLD ================= */
+/* ================= SLD ================= */
 
-function draw(board,boardId){
+function line(x1,y1,x2,y2,cls="bus"){
+  const e=document.createElementNS("http://www.w3.org/2000/svg","line");
+  e.setAttribute("x1",x1);
+  e.setAttribute("y1",y1);
+  e.setAttribute("x2",x2);
+  e.setAttribute("y2",y2);
+  e.setAttribute("class",cls);
+  svg.appendChild(e);
+}
+
+function text(x,y,str,anchor="middle",cls="label",clickUrl=null){
+  const t=document.createElementNS("http://www.w3.org/2000/svg","text");
+  t.setAttribute("x",x);
+  t.setAttribute("y",y);
+  t.setAttribute("text-anchor",anchor);
+  t.setAttribute("class",cls);
+  t.textContent=str;
+  if(clickUrl){
+    t.style.cursor="pointer";
+    t.addEventListener("click",()=>location.href=clickUrl);
+  }
+  svg.appendChild(t);
+}
+
+function transformer(x,y,name,transformerNo){
+  const g=document.createElementNS("http://www.w3.org/2000/svg","g");
+  g.style.cursor="pointer";
+
+  const c1=document.createElementNS("http://www.w3.org/2000/svg","circle");
+  c1.setAttribute("cx",x-12);c1.setAttribute("cy",y);
+  c1.setAttribute("r",10);c1.setAttribute("stroke","#000");c1.setAttribute("fill","none");
+
+  const c2=document.createElementNS("http://www.w3.org/2000/svg","circle");
+  c2.setAttribute("cx",x+12);c2.setAttribute("cy",y);
+  c2.setAttribute("r",10);c2.setAttribute("stroke","#000");c2.setAttribute("fill","none");
+
+  const lbl=document.createElementNS("http://www.w3.org/2000/svg","text");
+  lbl.setAttribute("x",x);lbl.setAttribute("y",y-18);
+  lbl.setAttribute("class","label");
+  lbl.textContent=name;
+
+  g.appendChild(c1);g.appendChild(c2);g.appendChild(lbl);
+
+  g.addEventListener("click",()=>{
+    location.href="https://08electricaldata.github.io/drive-viewer/history.html?id="+transformerNo;
+  });
+
+  svg.appendChild(g);
+}
+
+function breaker(x,y,label,side=null,isCoupler=false){
+  const r=document.createElementNS("http://www.w3.org/2000/svg","rect");
+  r.setAttribute("x",x-18);
+  r.setAttribute("y",y-12);
+  r.setAttribute("width",36);
+  r.setAttribute("height",24);
+  r.setAttribute("fill","#fff");
+  r.setAttribute("stroke","#000");
+  r.setAttribute("stroke-width","2");
+  svg.appendChild(r);
+
+  text(x,y+5,"CB","middle","cbtext");
+
+  if(!label) return;
+
+  const clickUrl="https://08electricaldata.github.io/drive-viewer/history.html?id=Breaker-"+label;
+
+  if(isCoupler)
+    text(x,y-24,label,"middle","label",clickUrl);
+  else if(side==="left")
+    text(x-150,y+5,label,"end","label",clickUrl);
+  else if(side==="right")
+    text(x+150,y+5,label,"start","label",clickUrl);
+}
+
+function arrowDown(x,y){
+  line(x,y,x,y+24,"bus");
+  const p=document.createElementNS("http://www.w3.org/2000/svg","polygon");
+  p.setAttribute("points",`${x-6},${y+24} ${x+6},${y+24} ${x},${y+36}`);
+  p.setAttribute("fill","#000");
+  svg.appendChild(p);
+}
+
+function draw(board){
 
   clearSVG();
 
   const W=1400;
-  const BUS_Y=300;
+  const BUS_Y=280;
+  const GAP=120;
+  const mid=W/2;
 
-  // Board Title
-  const t=document.createElementNS("http://www.w3.org/2000/svg","text");
-  t.setAttribute("x",700);
-  t.setAttribute("y",40);
-  t.setAttribute("class","board-title");
-  t.textContent=boardId;
-  svg.appendChild(t);
+  text(700,40,getParam("id"),"middle","board-title");
 
-  // Busbar
-  const line=document.createElementNS("http://www.w3.org/2000/svg","line");
-  line.setAttribute("x1",100);
-  line.setAttribute("y1",BUS_Y);
-  line.setAttribute("x2",1300);
-  line.setAttribute("y2",BUS_Y);
-  line.setAttribute("class","bus");
-  svg.appendChild(line);
+  line(100,BUS_Y,mid-GAP/2,BUS_Y);
+  line(mid+GAP/2,BUS_Y,W-100,BUS_Y);
+
+  if(board.busCouplers?.length){
+    const bc=board.busCouplers[0];
+    breaker(mid,BUS_Y,bc.breakerId,null,true);
+  }
+
+  const incomers=[...(board.incomers||[])];
+  const spacing=W/(incomers.length+1);
+
+  incomers.forEach((inc,i)=>{
+    const x=spacing*(i+1);
+    transformer(x,120,inc.source,inc.transformer);
+    line(x,140,x,BUS_Y-30,"power-line");
+    breaker(x,BUS_Y-40,inc.breakerId,i===0?"left":"right");
+  });
+
+  let maxPos=0;
+  [...(board.outgoings||[])].forEach(r=>{if(r.position>maxPos) maxPos=r.position;});
+  const leftMargin=120;
+  const rightMargin=W-120;
+  const usableWidth=rightMargin-leftMargin;
+
+  function posToX(pos){
+    return leftMargin+(usableWidth*(pos-1)/(maxPos-1));
+  }
+
+  (board.outgoings||[]).forEach((o,index)=>{
+    const x=posToX(o.position);
+    line(x,BUS_Y+6,x,BUS_Y+46);
+    breaker(x,BUS_Y+66,null);
+    arrowDown(x,BUS_Y+82);
+
+    const clickUrl="https://08electricaldata.github.io/drive-viewer/index.html?id="+o.breakerId;
+
+    if(index%2===0)
+      text(x,BUS_Y+150,o.breakerId,"middle","label",clickUrl);
+    else
+      text(x,BUS_Y+195,o.breakerId,"middle","label",clickUrl);
+  });
 }
 
 /* ================= LOAD ================= */
 
 async function loadSLD(){
-
   try{
-
     const boardId=getParam("id");
-
-    if(!boardId){
-      boardInfoEl.innerText="❌ Board id missing";
-      return;
-    }
-
+    if(!boardId){boardInfoEl.innerText="❌ Board id missing";return;}
     titleEl.innerText=boardId+" — Professional SLD";
 
     const res=await fetch(JSON_URL);
     const data=await res.json();
     const board=data.boards?.[boardId];
-
-    if(!board){
-      boardInfoEl.innerText="❌ Board not found";
-      return;
-    }
+    if(!board){boardInfoEl.innerText="❌ Board not found";return;}
 
     boardInfoEl.innerText="Incomers: "+board.topology.totalIncomers;
 
     buildColumnTable(board);
-    draw(board,boardId);
+    draw(board);
 
   }catch(e){
     console.error(e);
@@ -278,5 +343,6 @@ async function loadSLD(){
 loadSLD();
 
 </script>
+
 </body>
 </html>
