--- a/sld3.html
+++ b/sld3.html
@@ -6,6 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+  .subtitle{
+  font-size:14px;
+  font-weight:600;
+  color:#cce0ff;
+  text-align:center;
+  margin-top:2px;
+}
 body{font-family:Arial;margin:0;background:#f2f6ff}
 
 /* HEADER */
@@ -78,7 +85,10 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 <div class="header-bar">
   <button onclick="goHome()">🏠 Home</button>
   <button onclick="goBack()">⬅ Back</button>
+  <div style="flex:1;text-align:center;">
   <div class="header-title" id="title">HT BOARD SLD</div>
+  <div class="subtitle">Professional SLD - Designed and Maintained by Rakesh Chandra Sethy</div>
+</div>
 </div>
 
 <div class="container">
