--- a/sld.html
+++ b/sld.html
@@ -6,6 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+  .subtitle{
+  font-size:14px;
+  font-weight:600;
+  color:#cce0ff;
+  text-align:center;
+  margin-top:2px;
+}
 body{font-family:Arial;margin:0;background:#f2f6ff}
 
 /* HEADER */
@@ -29,13 +36,32 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
   padding:12px;
 }
 
-#wrap{
-  overflow:auto;border:1px solid #ccc;
-  background:#fff;height:70vh;
+/* ===== TABLE ===== */
+#columnTable{
+  width:100%;
+  border-collapse:collapse;
+  margin-bottom:15px;
+  table-layout:fixed;
 }
-#sldCanvas{width:100%;height:100%}
+#columnTable th,#columnTable td{
+  border:1px solid #000;
+  padding:6px;
+  text-align:center;
+  font-size:13px;
+  font-weight:600;
+}
 
-/* GRAPHICS */
+.incomer{background:#d9f2d9}
+.outgoing{background:#d9e8ff}
+.coupler{background:#fff3b0}
+
+/* ===== SLD ===== */
+#wrap{
+  overflow:auto;
+  border:1px solid #ccc;
+  background:#fff;
+  height:70vh;
+}
 .bus{stroke:#000;stroke-width:4}
 .power-line{
   stroke:#00cc44;stroke-width:4;
@@ -59,19 +85,30 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 <div class="header-bar">
   <button onclick="goHome()">🏠 Home</button>
   <button onclick="goBack()">⬅ Back</button>
+  <div style="flex:1;text-align:center;">
   <div class="header-title" id="title">HT BOARD SLD</div>
+  <div class="subtitle">Designed and Maintained by Rakesh Chandra Sethy</div>
+</div>
 </div>
 
 <div class="container">
   <div class="card">
+
     <div class="info" id="boardInfo">Loading...</div>
+
+    <!-- TABLE -->
+    <table id="columnTable"></table>
+
+    <!-- SLD -->
     <div id="wrap">
       <svg id="sldCanvas" viewBox="0 0 1400 620"></svg>
     </div>
+
   </div>
 </div>
 
 <script>
+
 const JSON_URL =
 "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/sld/boards_sld.json";
 
@@ -79,11 +116,78 @@ function goHome(){location.href="https://08electricaldata.github.io/"}
 function goBack(){history.back()}
 function getParam(n){return new URL(location.href).searchParams.get(n)}
 
-const svg=document.getElementById("sldCanvas");
+const columnTable=document.getElementById("columnTable");
 const boardInfoEl=document.getElementById("boardInfo");
 const titleEl=document.getElementById("title");
+const svg=document.getElementById("sldCanvas");
 
 function clearSVG(){svg.innerHTML=""}
+
+/* ================= TABLE ================= */
+
+function buildColumnTable(board){
+
+  columnTable.innerHTML="";
+  const allDevices=[];
+
+  (board.incomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
+  (board.outgoings||[]).forEach(d=>{d._type="OUTGOING";allDevices.push(d);});
+  (board.busCouplers||[]).forEach(d=>{d._type="BUS_COUPLER";allDevices.push(d);});
+  (board.busPT||[]).forEach(d=>{d._type="BUS_PT";allDevices.push(d);});
+  (board.linePT||[]).forEach(d=>{d._type="LINE_PT";allDevices.push(d);});
+  (board.dgIncomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
+  (board.emergencyIncomers||[]).forEach(d=>{d._type="INCOMER";allDevices.push(d);});
+
+  if(!allDevices.length) return;
+
+  let maxPos=0;
+  allDevices.forEach(d=>{if(d.position>maxPos) maxPos=d.position;});
+
+  const headerRow=document.createElement("tr");
+  for(let i=1;i<=maxPos;i++){
+    const th=document.createElement("th");
+    th.innerText=i;
+    headerRow.appendChild(th);
+  }
+  columnTable.appendChild(headerRow);
+
+  const row1=document.createElement("tr");
+  const row2=document.createElement("tr");
+  const row3=document.createElement("tr");
+
+  for(let i=1;i<=maxPos;i++){
+    const device=allDevices.find(d=>d.position===i);
+    const td1=document.createElement("td");
+    const td2=document.createElement("td");
+    const td3=document.createElement("td");
+
+    if(device){
+      const type=device._type;
+      td1.innerText=type;
+      td2.innerText=device.breakerId||"";
+      td3.innerText=device.breakerType||"";
+
+      let cls="";
+      if(["INCOMER","LINE_PT","BUS_PT"].includes(type)) cls="incomer";
+      else if(type==="OUTGOING") cls="outgoing";
+      else if(type==="BUS_COUPLER") cls="coupler";
+
+      td1.className=cls;
+      td2.className=cls;
+      td3.className=cls;
+    }
+
+    row1.appendChild(td1);
+    row2.appendChild(td2);
+    row3.appendChild(td3);
+  }
+
+  columnTable.appendChild(row1);
+  columnTable.appendChild(row2);
+  columnTable.appendChild(row3);
+}
+
+/* ================= SLD ================= */
 
 function line(x1,y1,x2,y2,cls="bus"){
   const e=document.createElementNS("http://www.w3.org/2000/svg","line");
@@ -102,53 +206,37 @@ function text(x,y,str,anchor="middle",cls="label",clickUrl=null){
   t.setAttribute("text-anchor",anchor);
   t.setAttribute("class",cls);
   t.textContent=str;
-
   if(clickUrl){
     t.style.cursor="pointer";
-    t.addEventListener("click",()=>{ location.href=clickUrl; });
+    t.addEventListener("click",()=>location.href=clickUrl);
   }
-
   svg.appendChild(t);
 }
 
-function drawBoardTitle(name){
-  text(700,40,name,"middle","board-title");
-}
-
 function transformer(x,y,name,transformerNo){
-  const group=document.createElementNS("http://www.w3.org/2000/svg","g");
-  group.style.cursor="pointer";
+  const g=document.createElementNS("http://www.w3.org/2000/svg","g");
+  g.style.cursor="pointer";
 
   const c1=document.createElementNS("http://www.w3.org/2000/svg","circle");
-  c1.setAttribute("cx",x-12);
-  c1.setAttribute("cy",y);
-  c1.setAttribute("r",10);
-  c1.setAttribute("stroke","#000");
-  c1.setAttribute("fill","none");
+  c1.setAttribute("cx",x-12);c1.setAttribute("cy",y);
+  c1.setAttribute("r",10);c1.setAttribute("stroke","#000");c1.setAttribute("fill","none");
 
   const c2=document.createElementNS("http://www.w3.org/2000/svg","circle");
-  c2.setAttribute("cx",x+12);
-  c2.setAttribute("cy",y);
-  c2.setAttribute("r",10);
-  c2.setAttribute("stroke","#000");
-  c2.setAttribute("fill","none");
+  c2.setAttribute("cx",x+12);c2.setAttribute("cy",y);
+  c2.setAttribute("r",10);c2.setAttribute("stroke","#000");c2.setAttribute("fill","none");
 
-  const label=document.createElementNS("http://www.w3.org/2000/svg","text");
-  label.setAttribute("x",x);
-  label.setAttribute("y",y-18);
-  label.setAttribute("class","label");
-  label.textContent=name;
+  const lbl=document.createElementNS("http://www.w3.org/2000/svg","text");
+  lbl.setAttribute("x",x);lbl.setAttribute("y",y-18);
+  lbl.setAttribute("class","label");
+  lbl.textContent=name;
 
-  group.appendChild(c1);
-  group.appendChild(c2);
-  group.appendChild(label);
+  g.appendChild(c1);g.appendChild(c2);g.appendChild(lbl);
 
-  group.addEventListener("click",()=>{
-    location.href=
-    "https://08electricaldata.github.io/drive-viewer/history.html?id="+transformerNo;
+  g.addEventListener("click",()=>{
+    location.href="https://08electricaldata.github.io/drive-viewer/history.html?id="+transformerNo;
   });
 
-  svg.appendChild(group);
+  svg.appendChild(g);
 }
 
 function breaker(x,y,label,side=null,isCoupler=false){
@@ -166,16 +254,14 @@ function breaker(x,y,label,side=null,isCoupler=false){
 
   if(!label) return;
 
-  const clickUrl =
-  "https://08electricaldata.github.io/drive-viewer/history.html?id=Breaker-"+label;
+  const clickUrl="https://08electricaldata.github.io/drive-viewer/history.html?id=Breaker-"+label;
 
-  if(isCoupler){
+  if(isCoupler)
     text(x,y-24,label,"middle","label",clickUrl);
-  }else if(side==="left"){
+  else if(side==="left")
     text(x-150,y+5,label,"end","label",clickUrl);
-  }else if(side==="right"){
+  else if(side==="right")
     text(x+150,y+5,label,"start","label",clickUrl);
-  }
 }
 
 function arrowDown(x,y){
@@ -186,29 +272,8 @@ function arrowDown(x,y){
   svg.appendChild(p);
 }
 
-async function loadSLD(){
-  try{
-    const boardId=getParam("id");
-    if(!boardId){ boardInfoEl.innerText="❌ Board id missing"; return;}
-
-    titleEl.innerText=boardId+" — Professional SLD";
-
-    const res=await fetch(JSON_URL);
-    const data=await res.json();
-    const board=data.boards?.[boardId];
-
-    if(!board){ boardInfoEl.innerText="❌ Board not found"; return;}
-
-    boardInfoEl.innerText="Incomers: "+board.topology.totalIncomers;
-    draw(board);
-
-  }catch(e){
-    console.error(e);
-    boardInfoEl.innerText="❌ Drawing error";
-  }
-}
-
 function draw(board){
+
   clearSVG();
 
   const W=1400;
@@ -216,33 +281,28 @@ function draw(board){
   const GAP=120;
   const mid=W/2;
 
-  line(100,BUS_Y,mid-GAP/2,BUS_Y,"bus");
-  line(mid+GAP/2,BUS_Y,W-100,BUS_Y,"bus");
+  text(700,40,getParam("id"),"middle","board-title");
+
+  line(100,BUS_Y,mid-GAP/2,BUS_Y);
+  line(mid+GAP/2,BUS_Y,W-100,BUS_Y);
 
   if(board.busCouplers?.length){
     const bc=board.busCouplers[0];
     breaker(mid,BUS_Y,bc.breakerId,null,true);
   }
 
-  const incomers=[...board.incomers];
-
+  const incomers=[...(board.incomers||[])];
   const spacing=W/(incomers.length+1);
 
   incomers.forEach((inc,i)=>{
     const x=spacing*(i+1);
-
-    transformer(x,120,inc.source,"Transformer-"+inc.transformer);
+    transformer(x,120,inc.source,inc.transformer);
     line(x,140,x,BUS_Y-30,"power-line");
-
-    const side=(i===0)?"left":"right";
-    breaker(x,BUS_Y-40,inc.breakerId,side,false);
+    breaker(x,BUS_Y-40,inc.breakerId,i===0?"left":"right");
   });
 
   let maxPos=0;
-  [...(board.outgoings||[])].forEach(r=>{
-    if(r.position>maxPos) maxPos=r.position;
-  });
-
+  [...(board.outgoings||[])].forEach(r=>{if(r.position>maxPos) maxPos=r.position;});
   const leftMargin=120;
   const rightMargin=W-120;
   const usableWidth=rightMargin-leftMargin;
@@ -253,23 +313,45 @@ function draw(board){
 
   (board.outgoings||[]).forEach((o,index)=>{
     const x=posToX(o.position);
-
-    line(x,BUS_Y+6,x,BUS_Y+46,"bus");
+    line(x,BUS_Y+6,x,BUS_Y+46);
     breaker(x,BUS_Y+66,null);
     arrowDown(x,BUS_Y+82);
 
-    const clickUrl=
-    "https://08electricaldata.github.io/drive-viewer/index.html?id="+o.breakerId;
+    const clickUrl="https://08electricaldata.github.io/drive-viewer/index.html?id="+o.breakerId;
 
-    if(index % 2 === 0){
+    if(index%2===0)
       text(x,BUS_Y+150,o.breakerId,"middle","label",clickUrl);
-    }else{
+    else
       text(x,BUS_Y+195,o.breakerId,"middle","label",clickUrl);
-    }
   });
 }
 
+/* ================= LOAD ================= */
+
+async function loadSLD(){
+  try{
+    const boardId=getParam("id");
+    if(!boardId){boardInfoEl.innerText="❌ Board id missing";return;}
+    titleEl.innerText=boardId+" — Professional SLD";
+
+    const res=await fetch(JSON_URL);
+    const data=await res.json();
+    const board=data.boards?.[boardId];
+    if(!board){boardInfoEl.innerText="❌ Board not found";return;}
+
+    boardInfoEl.innerText="Incomers: "+board.topology.totalIncomers;
+
+    buildColumnTable(board);
+    draw(board);
+
+  }catch(e){
+    console.error(e);
+    boardInfoEl.innerText="❌ Drawing error";
+  }
+}
+
 loadSLD();
+
 </script>
 
 </body>
